added create, delete and update

--- a/MyBlog/Templates/MyBlog/post_detail.html
+++ b/MyBlog/Templates/MyBlog/post_detail.html
@@ -6,6 +6,10 @@
                 <div class="article-metadata">
                   <a class="mr-2" href="#">{{ object.author }}</a>
                   <small class="text-muted">{{ object.date_posted }}</small>
+                    {% if object.author == user %}
+                    <a href="{% url 'post_update' object.id %}" class="btn btn-outline-info btn-sm float-right">Edit</a>
+                    <a href="{% url 'post_delete' object.id %}" class="btn btn-outline-danger btn-sm float-right mr-2">Delete</a>
+                    {% endif %}
                 </div>
                 <h2 class="article-title">{{ object.title }}</h2>
                 <p class="article-content">{{ object.content }}</p>
