--- a/MyBlog/Templates/Blog/base.html
+++ b/MyBlog/Templates/Blog/base.html
@@ -33,7 +33,7 @@
         <div class="navbar-nav ms-auto">
 
             {% if user.is_authenticated %}
-
+            <a class="nav-item nav-link" href="{% url 'post_create'%}">New Post</a>
             <a class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
             <form method="post" action="{% url 'logout' %}" style="display: inline;">
                 {% csrf_token %}
